# opengl

./: CMakeLists.txt  EBO.h  ShaderProgram.h  Utils.cpp  Utils.h  VAO.h  VBO.cpp  VBO.h  Window.cpp  Window.h  gameObject.cpp  gameObject.h  main.cpp  setup.cpp  setup.h  utils.cpp  utils.h  window.cpp  window.h
graphics/: CMakeLists.txt  EBO.cpp  EBO.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  camera.cpp  camera.h  directional.cpp  directional.h  graphics.h  light.cpp  light.h  point.cpp  point.h  shaderProgram.cpp  shaderProgram.h  spot.cpp  spot.h  texture2d.cpp  texture2d.h  utils.h
graphics/include/glad/include/glad/: glad.h
graphics/include/glad/src/: glad.c
res/shaders/: gourand.frag  gourand.vert  lamp.frag  lamp.vert  main.frag  main.vert  noise.frag  phong.frag  phong.vert
shaders/: main.frag  main.vert  noise.frag  noise.vert
src/: Window.cpp  Window.h  main.cpp
